<?xml version="1.0" encoding="utf-8"?>
<!--
Copyright (C) 2013 Aurelien Ticot

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

     http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
-->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:custom="http://schemas.android.com/apk/res/com.ticot.simuimmo"
    android:id="@+id/layoutScrollForm"
    style="@style/Form.ScrollView" >
    
    <LinearLayout
        android:id="@+id/layoutForm"
        style="@style/Form.LinearLayoutForm" >
        
        <TextView
            style="@style/Form.CategoryLabel"
            android:text="@string/label_revente_cout_acquisition" />
        
        <com.ticot.simuimmo.activities.FieldComponent 
            android:id="@+id/Field_Revente_cout_total"
            style="@style/Form.FieldLayout"
    		custom:collapsible="true"
			custom:mandatory="false"
			custom:choiceAvailability="false"
			custom:choiceChecked="false"
			custom:fieldValueConfig="TextView"
			custom:fieldName="@string/field_name_revente_cout_total"
			custom:fieldValueText=""
			custom:fieldValueHint="@string/default_value_zero_euro"
			custom:valueFormat="euro" />
        
        <com.ticot.simuimmo.activities.FieldComponent 
            android:id="@+id/Field_Revente_dont_valeur_bien"
            style="@style/Form.FieldLayout"
    		custom:collapsible="true"
			custom:mandatory="false"
			custom:choiceAvailability="false"
			custom:choiceChecked="false"
			custom:fieldValueConfig="TextView"
			custom:fieldName="@string/field_name_revente_dont_valeur_bien"
			custom:fieldValueText=""
			custom:fieldValueHint="@string/default_value_zero_euro"
			custom:valueFormat="euro" />
        
        <com.ticot.simuimmo.activities.FieldComponent 
            android:id="@+id/Field_Revente_dont_frais"
            style="@style/Form.FieldLayout"
    		custom:collapsible="true"
			custom:mandatory="false"
			custom:choiceAvailability="false"
			custom:choiceChecked="false"
			custom:fieldValueConfig="TextView"
			custom:fieldName="@string/field_name_revente_dont_frais"
			custom:fieldValueText=""
			custom:fieldValueHint="@string/default_value_zero_euro"
			custom:valueFormat="euro" />
        
        <com.ticot.simuimmo.activities.FieldComponent 
            android:id="@+id/Field_Revente_apport_inclu"
            style="@style/Form.FieldLayout"
    		custom:collapsible="true"
			custom:mandatory="false"
			custom:choiceAvailability="false"
			custom:choiceChecked="false"
			custom:fieldValueConfig="TextView"
			custom:fieldName="@string/field_name_revente_apport_inclu"
			custom:fieldValueText=""
			custom:fieldValueHint="@string/default_value_zero_euro"
			custom:valueFormat="euro" />
        
        <TextView
            style="@style/Form.CategoryLabel"
            android:text="@string/label_revente_ROI_apres_renovation" />
        
        <com.ticot.simuimmo.activities.FieldComponent 
            android:id="@+id/Field_Revente_valeur_revente_estimee"
            style="@style/Form.FieldLayout"
    		custom:collapsible="false"
			custom:mandatory="true"
			custom:choiceAvailability="false"
			custom:choiceChecked="false"
			custom:fieldValueConfig="TextView_EditText"
			custom:fieldName="@string/field_name_revente_valeur_revente_estimee"
			custom:fieldValueText=""
			custom:fieldValueHint="@string/default_value_zero_euro"
			custom:valueFormat="euro" />
        
        <com.ticot.simuimmo.activities.FieldComponent 
            android:id="@+id/Field_Revente_plus_value_bien_an1"
            style="@style/Form.FieldLayout"
    		custom:collapsible="true"
			custom:mandatory="false"
			custom:choiceAvailability="false"
			custom:choiceChecked="false"
			custom:fieldValueConfig="TextView"
			custom:fieldName="@string/field_name_revente_plus_value_bien_an1"
			custom:fieldValueText=""
			custom:fieldValueHint="@string/default_value_zero_euro"
			custom:valueFormat="euro" />
        
        <com.ticot.simuimmo.activities.FieldComponent 
            android:id="@+id/Field_Revente_plus_value_global"
            style="@style/Form.FieldLayout"
    		custom:collapsible="true"
			custom:mandatory="false"
			custom:choiceAvailability="false"
			custom:choiceChecked="false"
			custom:fieldValueConfig="TextView"
			custom:fieldName="@string/field_name_revente_plus_value_globale"
			custom:fieldValueText=""
			custom:fieldValueHint="@string/default_value_zero_euro"
			custom:valueFormat="euro" />
        
        <com.ticot.simuimmo.activities.FieldComponent 
            android:id="@+id/Field_Revente_roi_equilibre"
            style="@style/Form.FieldLayout"
    		custom:collapsible="false"
			custom:mandatory="false"
			custom:choiceAvailability="false"
			custom:choiceChecked="false"
			custom:fieldValueConfig="TextView"
			custom:fieldName="@string/field_name_revente_roi_equilibre"
			custom:fieldValueText=""
			custom:fieldValueHint=""
			custom:valueFormat="none" />
        
        <TextView
            style="@style/Form.CategoryLabel"
            android:text="@string/label_revente_revente" />
        
        <com.ticot.simuimmo.activities.FieldComponent 
            android:id="@+id/Field_Revente_revente_apres"
            style="@style/Form.FieldLayout"
    		custom:collapsible="true"
			custom:mandatory="false"
			custom:choiceAvailability="false"
			custom:choiceChecked="false"
			custom:fieldValueConfig="TextView"
			custom:fieldName="@string/field_name_revente_revente_apres"
			custom:fieldUserValueText="@string/default_value_revente_revente_apres"
			custom:fieldUserValueHint=""
			custom:valueFormat="none" />
        
        <com.ticot.simuimmo.activities.FieldComponent 
            android:id="@+id/Field_Revente_plus_value_bien_revente"
            style="@style/Form.FieldLayout"
    		custom:collapsible="true"
			custom:mandatory="false"
			custom:choiceAvailability="false"
			custom:choiceChecked="false"
			custom:fieldValueConfig="TextView"
			custom:fieldName="@string/field_name_revente_plus_value_bien_revente"
			custom:fieldValueText=""
			custom:fieldValueHint="@string/default_value_zero_euro"
			custom:valueFormat="euro" />
        
        <com.ticot.simuimmo.activities.FieldComponent 
            android:id="@+id/Field_Revente_revenu_cumule"
            style="@style/Form.FieldLayout"
    		custom:collapsible="true"
			custom:mandatory="false"
			custom:choiceAvailability="false"
			custom:choiceChecked="false"
			custom:fieldValueConfig="TextView"
			custom:fieldName="@string/field_name_revente_revenu_cumule"
			custom:fieldValueText=""
			custom:fieldValueHint="@string/default_value_zero_euro"
			custom:valueFormat="euro" />
        
        <com.ticot.simuimmo.activities.FieldComponent 
            android:id="@+id/Field_Revente_imposition_plus_value"
            style="@style/Form.FieldLayout"
    		custom:collapsible="true"
			custom:mandatory="false"
			custom:choiceAvailability="false"
			custom:choiceChecked="false"
			custom:fieldValueConfig="TextView"
			custom:fieldName="@string/field_name_revente_imposition_plus_value"
			custom:fieldValueText=""
			custom:fieldValueHint="@string/default_value_zero_euro"
			custom:valueFormat="euro" />
        
        <com.ticot.simuimmo.activities.FieldComponent 
            android:id="@+id/Field_Revente_gain_global"
            style="@style/Form.FieldLayout"
    		custom:collapsible="false"
			custom:mandatory="false"
			custom:choiceAvailability="false"
			custom:choiceChecked="false"
			custom:fieldValueConfig="TextView"
			custom:fieldName="@string/field_name_revente_gain_global"
			custom:fieldValueText=""
			custom:fieldValueHint="@string/default_value_zero_euro"
			custom:valueFormat="euro" />
        
        <com.ticot.simuimmo.activities.FieldComponent 
            android:id="@+id/Field_Revente_roi"
            style="@style/Form.FieldLayout"
    		custom:collapsible="true"
			custom:mandatory="false"
			custom:choiceAvailability="false"
			custom:choiceChecked="false"
			custom:fieldValueConfig="TextView"
			custom:fieldName="@string/field_name_revente_roi"
			custom:fieldValueText=""
			custom:fieldValueHint=""
			custom:valueFormat="none" />
        
        <com.ticot.simuimmo.activities.FieldComponent 
            android:id="@+id/Field_Revente_tri_location_nu"
            style="@style/Form.FieldLayout"
    		custom:collapsible="true"
			custom:mandatory="false"
			custom:choiceAvailability="false"
			custom:choiceChecked="false"
			custom:fieldValueConfig="TextView"
			custom:fieldName="@string/field_name_revente_tri_location_nu"
			custom:fieldValueText=""
			custom:fieldValueHint="@string/default_value_zero_per"
			custom:valueFormat="percentage" />
        
        <com.ticot.simuimmo.activities.FieldComponent 
            android:id="@+id/Field_Revente_tri_location_meuble"
            style="@style/Form.FieldLayout"
    		custom:collapsible="true"
			custom:mandatory="false"
			custom:choiceAvailability="false"
			custom:choiceChecked="false"
			custom:fieldValueConfig="TextView"
			custom:fieldName="@string/field_name_revente_tri_location_meuble"
			custom:fieldValueText=""
			custom:fieldValueHint="@string/default_value_zero_per"
			custom:valueFormat="percentage" />
        
        <com.ticot.simuimmo.activities.FieldComponent 
            android:id="@+id/Field_Revente_tri_location_saisonniere"
            style="@style/Form.FieldLayout"
    		custom:collapsible="true"
			custom:mandatory="false"
			custom:choiceAvailability="false"
			custom:choiceChecked="false"
			custom:fieldValueConfig="TextView"
			custom:fieldName="@string/field_name_revente_tri_location_saisonniere"
			custom:fieldValueText=""
			custom:fieldValueHint="@string/default_value_zero_per"
			custom:valueFormat="percentage" />
        
        <com.ticot.simuimmo.activities.FieldComponent 
            android:id="@+id/Field_Revente_tri_residence_principale"
            style="@style/Form.FieldLayout"
    		custom:collapsible="true"
			custom:mandatory="false"
			custom:choiceAvailability="false"
			custom:choiceChecked="false"
			custom:fieldValueConfig="TextView"
			custom:fieldName="@string/field_name_revente_tri_residence_principale"
			custom:fieldValueText=""
			custom:fieldValueHint="@string/default_value_zero_per"
			custom:valueFormat="percentage" />
        
	</LinearLayout>

</ScrollView>